--- a/exp1.html
+++ b/exp1.html
@@ -4,13 +4,52 @@
 <title>Page Title</title>
 </head>
 <body>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  .center-text {
+    text-align: center;
+  }
+</style>
+</head>
+<body>
 
-<h1>Online Event Registration & Promotional Portal</h1>
-<p> REGISTRATION TUTORIAL</p>
-<video width="320" height="240" controls>
+<div class="center-text">
+  <h1>Online Event Registration & Promotional Portal</h1>
+  <p>REGISTRATION TUTORIAL</p>
+</div>
+
+</body>
+</html>
+
+<!-- <h1>Online Event Registration & Promotional Portal</h1>
+<p>REGISTRATION TUTORIAL</p> -->
+<!-- <video width="320" height="240" controls>
   <source src="C:\Users\urk23cs5084\Pictures\samplevideo.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
+Your browser does not support the video tag. -->
+<head>
+<style>
+.video-container {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center;     /* Centers vertically (if the container has a defined height) */
+    height: 10;           /* Takes up the full height of the viewport */
+    width: 100%;
+}
+</style>
+</head>
+<body>
+
+<div class="video-container">
+    <video controls width="600">
+        <source src="C:\Users\urk23cs5084\Downloads\5084ex.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+
+</body>
 
 </video>
 <head>
